Renomme NotesDeCours + ajoute PCours

--- a/420-fah-li-em.html
+++ b/420-fah-li-em.html
@@ -44,7 +44,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>420-XXX-LI Nom du cours (session) — Cégep Limoilou – Enseignant: Eric Martel</title>
+<title>420-FAH-LI Développement informatique (Été 2022) — Cégep Limoilou – Enseignant: Eric Martel</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~--><!--~~ Raw markup ~~-->
 
 
@@ -147,6 +147,14 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/showeditpreview</li>
+
+<li>$:/state/sidebar</li>
+
+<li>$:/state/toc/Table des matières-01 Diagrammes de classe UML--249536019</li>
+
+<li>$:/state/toc/Table des matières-02 Systèmes de contrôle de version--249536019</li>
+
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
@@ -158,6 +166,18 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/vanilla</li>
 
 <li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
+
+<li>00 Documents</li>
+
+<li>01 Diagrammes de classe UML</li>
+
+<li>02 Systèmes de contrôle de version</li>
+
+<li>1.01 UML</li>
+
+<li>1.02 Diagrammes de classes</li>
+
+<li>2.01 Introduction</li>
 
 <li>css</li>
 
@@ -8789,10 +8809,22 @@ Error message and password prompt
 <div bag="default" created="20181113130555919" modified="20200122163534251" revision="0" title="$:/SiteSubtitle" type="text/vnd.tiddlywiki">
 <pre>Cégep Limoilou -- Enseignant: Eric Martel</pre>
 </div>
-<div bag="default" created="20181113130525973" modified="20200122163527288" revision="0" title="$:/SiteTitle" type="text/vnd.tiddlywiki">
-<pre>420-XXX-LI Nom du cours (session)</pre>
+<div bag="default" created="20181113130525973" modified="20220622191446194" revision="0" title="$:/SiteTitle" type="text/vnd.tiddlywiki">
+<pre>420-FAH-LI Développement informatique (Été 2022)</pre>
 </div>
-<div list="[[Table des matières]]" title="$:/StoryList">
+<div created="20220623110405281" modified="20220623110405281" title="$:/state/showeditpreview">
+<pre>yes</pre>
+</div>
+<div created="20220623110407925" modified="20220623110407925" title="$:/state/sidebar">
+<pre>no</pre>
+</div>
+<div created="20220622191805667" modified="20220623110141534" title="$:/state/toc/Table des matières-01 Diagrammes de classe UML--249536019">
+<pre>open</pre>
+</div>
+<div created="20220622191803003" modified="20220622191803983" title="$:/state/toc/Table des matières-02 Systèmes de contrôle de version--249536019">
+<pre>close</pre>
+</div>
+<div list="[[Table des matières]] [[1.01 UML]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8808,7 +8840,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-xxx-li-em/NotesDeCours.html&quot;
+            &quot;text&quot;: &quot;file:///E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em/NotesDeCours.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -8828,7 +8860,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-xxx-li-em/NotesDeCours.html&quot;
+            &quot;text&quot;: &quot;/E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em/NotesDeCours.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -8840,11 +8872,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1440&quot;
+            &quot;text&quot;: &quot;1728&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;2560&quot;
+            &quot;text&quot;: &quot;3073&quot;
         }
     }
 }</pre>
@@ -8963,6 +8995,52 @@ Error message and password prompt
 </div>
 <div bag="default" created="20181113130651975" modified="20181113130653357" revision="0" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout" type="text/vnd.tiddlywiki">
 <pre>fluid-fixed</pre>
+</div>
+<div created="20220622191819134" modified="20220622191846941" tags="[[Table des matières]]" title="00 Documents">
+<pre>* Plan de cours</pre>
+</div>
+<div created="20220622191313051" modified="20220622191611874" tags="[[Table des matières]]" title="01 Diagrammes de classe UML">
+<pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;$macrocall $name=&quot;toc-selective-expandable&quot; tag=&lt;&lt;currentTiddler&gt;&gt;/&gt;
+
+&lt;/div&gt;</pre>
+</div>
+<div created="20220622191703656" modified="20220622191722048" tags="[[Table des matières]]" title="02 Systèmes de contrôle de version">
+<pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;$macrocall $name=&quot;toc-selective-expandable&quot; tag=&lt;&lt;currentTiddler&gt;&gt;/&gt;
+
+&lt;/div&gt;</pre>
+</div>
+<div created="20220622191618328" modified="20220623112353442" tags="[[01 Diagrammes de classe UML]]" title="1.01 UML">
+<pre>* ''UML'' = [[Unified Modeling Language|https://fr.wikipedia.org/wiki/UML_(informatique)]]
+* Norme de modélisation graphique en informatique
+* Utilisé pour:
+** modélisation orientée objet (diagramme de classes)
+** modélisation de bases de données relationnelles
+** modélisation [[d'autres concepts informatiques|https://www.visual-paradigm.com/guide/uml-unified-modeling-language/what-is-uml/]]:
+*** diagramme de composantes
+*** diagramme de déploiement
+*** diagramme d'instances
+*** diagramme de paquetages
+*** diagramme de structures composites
+*** diagramme de profils
+*** diagramme de cas d'usage
+*** diagramme d'activités
+*** diagramme d'états de machine
+*** diagramme de séquences
+*** diagramme de communications
+*** diagramme d'interactions
+*** diagramme de synchronization
+
+[img[Source: https://www.visual-paradigm.com/guide/uml-unified-modeling-language/what-is-uml/|https://i.imgur.com/64dRt4E.png]]</pre>
+</div>
+<div created="20220622191639683" modified="20220622191653325" tags="[[01 Diagrammes de classe UML]]" title="1.02 Diagrammes de classes">
+<pre></pre>
+</div>
+<div created="20220622191725220" modified="20220622191754197" tags="[[02 Systèmes de contrôle de version]]" title="2.01 Introduction">
+<pre></pre>
 </div>
 <div bag="default" created="20181113131237544" modified="20210822182401138" revision="0" tags="$:/tags/Stylesheet" title="css" type="text/css">
 <pre>.boite {
