--- a/420-fah-li-em.html
+++ b/420-fah-li-em.html
@@ -183,6 +183,8 @@ Error message and password prompt
 
 <li>1.2.01 Le diagramme d'une classe</li>
 
+<li>1.2.02 Les relations de base</li>
+
 <li>1.Exercices</li>
 
 <li>2.01 Introduction</li>
@@ -8829,16 +8831,16 @@ Error message and password prompt
 <div created="20220623110407925" modified="20220623123814148" title="$:/state/sidebar">
 <pre>yes</pre>
 </div>
-<div created="20220622191805667" modified="20220623152857625" title="$:/state/toc/Table des matières-01 Diagrammes de classe UML--249536019">
-<pre>open</pre>
+<div created="20220622191805667" modified="20220628154718602" title="$:/state/toc/Table des matières-01 Diagrammes de classe UML--249536019">
+<pre>close</pre>
 </div>
 <div created="20220622191803003" modified="20220622191803983" title="$:/state/toc/Table des matières-02 Systèmes de contrôle de version--249536019">
 <pre>close</pre>
 </div>
-<div created="20220623144907257" modified="20220623152903147" title="$:/state/toc/Table des matières/01 Diagrammes de classe UML-1.02 Diagrammes de classes--249536019">
-<pre>open</pre>
+<div created="20220623144907257" modified="20220628154717355" title="$:/state/toc/Table des matières/01 Diagrammes de classe UML-1.02 Diagrammes de classes--249536019">
+<pre>close</pre>
 </div>
-<div list="$:/ControlPanel Semainier [[Table des matières]] 1.Exercices" title="$:/StoryList">
+<div list="Semainier [[Table des matières]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8854,7 +8856,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em/NotesDeCours.html&quot;
+            &quot;text&quot;: &quot;file:///E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -8874,7 +8876,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em/NotesDeCours.html&quot;
+            &quot;text&quot;: &quot;/E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -8890,7 +8892,7 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1729&quot;
+            &quot;text&quot;: &quot;1728&quot;
         }
     }
 }</pre>
@@ -9141,15 +9143,40 @@ Le méthode Personne() ci-dessus est le constructeur.
 
 &lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/7e5d754a-b3b1-449c-a1be-ab6e9a60f1d2?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
-<div created="20220623143644530" modified="20220623153212151" tags="[[01 Diagrammes de classe UML]]" title="1.Exercices">
+<div created="20220628141218693" modified="20220628153240517" tags="[[1.02 Diagrammes de classes]]" title="1.2.02 Les relations de base">
+<pre>Dans un diagramme de classes, il sera important de mettre les classes en relation les unes aux autres.
+
+Il existe plusieurs relations possibles entre des classes, mais les trois suivantes seront principalement utilisées dans le cours:
+
+* ''Dépendance / utilisation'': une relation de dépendance existe entre deux classes lorsque l'on peut dire qu'une classe dépend de ou utilise l'autre classe. On la représente par une tête de flèche pleine avec un trait pointillé qui va de la classe dépendante vers la classe utilisée. P.ex., la classe //Personne// ci-dessous dépend de (utilise) la classe //Langue// (pour sa propriété //~LangueMaternelle//):&lt;div&gt;
+[img width=600 [https://i.imgur.com/9KGUa3t.png]]
+&lt;/div&gt;
+
+* ''Généralisation / héritage:'' une relation de généralisation (ou d'héritage) existe lorsqu'une classe hérite (est un enfant) d'une autre classe. On la représente par une tête de flèche vide avec un trait plein qui va de la classe héritière (enfant) vers la classe générale (parent); on l'utilise quand on peut dire qu'une classe «est un» de l'autre classe (p.ex., une Bicyclette //est un// Vehicule).&lt;div&gt;
+[img width=600 [https://i.imgur.com/CqeFqLJ.png]]
+&lt;/div&gt;
+
+* ''Réalisation / implémentation (d'interface OO):'' Il s'agit du cas où une classe réalise une interface OO (//à ne pas confondre avec une interface graphique!//). Les interfaces ici sont des sortes de squelettes de classes qui ne peuvent être instantiées et ne contiennent aucune définition de méthode: il faudra //réaliser// (ou implémenter) une interface en classe pour qu'elle «prenne vie». Une relation de réalisation est représentée par une tête de flèche vide avec un trait pointillé. P.ex., ci-dessous, la classe //Vehicule// réalise (implémente) l'interface //IVehicule//. &lt;div&gt;
+[img[https://i.imgur.com/coVsk3l.png]]
+&lt;/div&gt;
+
+D'autres types de relations existantes (comme l'''association simple'', l'''aggrégation'' et la ''composition'') représentent des cas plus abstraits (généralement non représentés directement par le code) qu'il n'est pas toujours pertinent de présenter dans un diagramme UML de classes.</pre>
+</div>
+<div created="20220623143644530" modified="20220628154515026" tags="[[01 Diagrammes de classe UML]]" title="1.Exercices">
 <pre>''Note:'' chaque exercice de n'importe quelle section ''doit'' être fait et présenté à l'enseignant et pourrait être inclus dans un travail pratique à venir.
 
-# Modélisez chaque classe (seulement les classes, pas les liens) du [[projet du Pendu initial|https://lecegeplimoilou-my.sharepoint.com/:u:/g/personal/eric_martel_cegeplimoilou_ca/EbCwO6DjmEdOqeODw7FlfgIBYeyp3dGMFDRSwh7naKSN7Q?e=PJbAPT&amp;download=1]] avec les logiciels suivants:
+# //''À partir du code source seulement''//, modélisez chaque classe (seulement les classes, pas les liens) du [[projet du Pendu initial|https://lecegeplimoilou-my.sharepoint.com/:u:/g/personal/eric_martel_cegeplimoilou_ca/EbCwO6DjmEdOqeODw7FlfgIBYeyp3dGMFDRSwh7naKSN7Q?e=PJbAPT&amp;download=1]] avec les logiciels suivants:
 
 #* Microsoft Visio Professionnel (disponible sur le [[portail Azure|https://portal.azure.com/#view/Microsoft_Azure_Education/EducationMenuBlade/~/software]])
 #* [[Yed Live|https://www.yworks.com/yed-live/]]
 #* [[diagrams.net|https://app.diagrams.net/]]
-#* [[Visual Paradigm|https://www.visual-paradigm.com/download/community.jsp]]</pre>
+#* [[Visual Paradigm|https://www.visual-paradigm.com/download/community.jsp]]
+
+# //''Toujours à partir du code source seulement''//, pour chacun des modèles créés en 1 ci-dessus, insérez toutes les relations nécessaires entre les classes et énumérations (le cas échéant).
+
+# Avec le logiciel de modélisation de votre choix parmi ceux ci-dessus, modélisez entièrement une solution au défi 2 du cours de POO 2 (//vous n'avez pas besoin d'avoir fait le défi pour créer le modèle: c'est même mieux au contraire de faire le modèle avant de commencer à coder!//).
+#* Choisissez bien les classes, attributs et méthodes qui constitueront votre solution. 
+#* Votre solution finale au défi 2 en POO 2 pourra être différente de ce que vous aurez d'abord imaginé comme modèle ici (c'est fréquent de changer un modèle en cours de réalisation d'un programme!).</pre>
 </div>
 <div created="20220622191725220" modified="20220622191754197" tags="[[02 Systèmes de contrôle de version]]" title="2.01 Introduction">
 <pre></pre>
@@ -9209,9 +9236,10 @@ pre, code {
 &lt;/p&gt;
 \end</pre>
 </div>
-<div created="20220623152814314" modified="20220623152854662" tags="" title="Semainier">
+<div created="20220623152814314" modified="20220628154645146" tags="" title="Semainier">
 <pre>| Semaine | Sections à l'étude | Exercices / Travaux |h
-| 1 (20 juin) | 1 | 1.Exercices |</pre>
+| 1 (20 juin) | 1 | 1.Exercices |
+| 2 (27 juin) | 1 (ajouté 1.2.02) | 1.Exercices (ajouté 1.2 et 1.3) |</pre>
 </div>
 <div bag="default" caption="Contenu" created="20181113130821883" list-before="$:/core/ui/SideBar/Open" modified="20181113131023314" revision="0" tags="$:/tags/SideBar" title="Table des matières" type="text/vnd.tiddlywiki">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
