--- a/420-fah-li-em.html
+++ b/420-fah-li-em.html
@@ -8828,19 +8828,19 @@ Error message and password prompt
 <div created="20220623110405281" modified="20220623110405281" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
-<div created="20220623110407925" modified="20220623123814148" title="$:/state/sidebar">
-<pre>yes</pre>
+<div created="20220623110407925" modified="20220628155114068" title="$:/state/sidebar">
+<pre>no</pre>
 </div>
-<div created="20220622191805667" modified="20220628154718602" title="$:/state/toc/Table des matières-01 Diagrammes de classe UML--249536019">
-<pre>close</pre>
+<div created="20220622191805667" modified="20220628155041010" title="$:/state/toc/Table des matières-01 Diagrammes de classe UML--249536019">
+<pre>open</pre>
 </div>
 <div created="20220622191803003" modified="20220622191803983" title="$:/state/toc/Table des matières-02 Systèmes de contrôle de version--249536019">
 <pre>close</pre>
 </div>
-<div created="20220623144907257" modified="20220628154717355" title="$:/state/toc/Table des matières/01 Diagrammes de classe UML-1.02 Diagrammes de classes--249536019">
-<pre>close</pre>
+<div created="20220623144907257" modified="20220628155044670" title="$:/state/toc/Table des matières/01 Diagrammes de classe UML-1.02 Diagrammes de classes--249536019">
+<pre>open</pre>
 </div>
-<div list="Semainier [[Table des matières]]" title="$:/StoryList">
+<div list="[[1.2.02 Les relations de base]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9143,7 +9143,7 @@ Le méthode Personne() ci-dessus est le constructeur.
 
 &lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/7e5d754a-b3b1-449c-a1be-ab6e9a60f1d2?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
-<div created="20220628141218693" modified="20220628153240517" tags="[[1.02 Diagrammes de classes]]" title="1.2.02 Les relations de base">
+<div created="20220628141218693" modified="20220628160810398" tags="[[1.02 Diagrammes de classes]]" title="1.2.02 Les relations de base">
 <pre>Dans un diagramme de classes, il sera important de mettre les classes en relation les unes aux autres.
 
 Il existe plusieurs relations possibles entre des classes, mais les trois suivantes seront principalement utilisées dans le cours:
@@ -9160,7 +9160,11 @@ Il existe plusieurs relations possibles entre des classes, mais les trois suivan
 [img[https://i.imgur.com/coVsk3l.png]]
 &lt;/div&gt;
 
-D'autres types de relations existantes (comme l'''association simple'', l'''aggrégation'' et la ''composition'') représentent des cas plus abstraits (généralement non représentés directement par le code) qu'il n'est pas toujours pertinent de présenter dans un diagramme UML de classes.</pre>
+D'autres types de relations existantes (comme l'''association simple'', l'''aggrégation'' et la ''composition'') représentent des cas plus abstraits (généralement non représentés directement par le code) qu'il n'est pas toujours pertinent de présenter dans un diagramme UML de classes.
+
+---
+
+&lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/1b991fce-7fe6-44e0-b76f-ade46dd35e67?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
 <div created="20220623143644530" modified="20220628154515026" tags="[[01 Diagrammes de classe UML]]" title="1.Exercices">
 <pre>''Note:'' chaque exercice de n'importe quelle section ''doit'' être fait et présenté à l'enseignant et pourrait être inclus dans un travail pratique à venir.
