Défi 3 plutôt que 2

--- a/420-fah-li-em.html
+++ b/420-fah-li-em.html
@@ -8828,19 +8828,19 @@ Error message and password prompt
 <div created="20220623110405281" modified="20220623110405281" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
-<div created="20220623110407925" modified="20220628155114068" title="$:/state/sidebar">
-<pre>no</pre>
+<div created="20220623110407925" modified="20220629125706138" title="$:/state/sidebar">
+<pre>yes</pre>
 </div>
-<div created="20220622191805667" modified="20220628155041010" title="$:/state/toc/Table des matières-01 Diagrammes de classe UML--249536019">
-<pre>open</pre>
+<div created="20220622191805667" modified="20220629125709106" title="$:/state/toc/Table des matières-01 Diagrammes de classe UML--249536019">
+<pre>close</pre>
 </div>
 <div created="20220622191803003" modified="20220622191803983" title="$:/state/toc/Table des matières-02 Systèmes de contrôle de version--249536019">
 <pre>close</pre>
 </div>
-<div created="20220623144907257" modified="20220628155044670" title="$:/state/toc/Table des matières/01 Diagrammes de classe UML-1.02 Diagrammes de classes--249536019">
-<pre>open</pre>
+<div created="20220623144907257" modified="20220629125707852" title="$:/state/toc/Table des matières/01 Diagrammes de classe UML-1.02 Diagrammes de classes--249536019">
+<pre>close</pre>
 </div>
-<div list="[[1.2.02 Les relations de base]]" title="$:/StoryList">
+<div list="Semainier [[Table des matières]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9166,7 +9166,7 @@ D'autres types de relations existantes (comme l'''association simple'', l'''aggr
 
 &lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/1b991fce-7fe6-44e0-b76f-ade46dd35e67?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
-<div created="20220623143644530" modified="20220628154515026" tags="[[01 Diagrammes de classe UML]]" title="1.Exercices">
+<div created="20220623143644530" modified="20220629125656070" tags="[[01 Diagrammes de classe UML]]" title="1.Exercices">
 <pre>''Note:'' chaque exercice de n'importe quelle section ''doit'' être fait et présenté à l'enseignant et pourrait être inclus dans un travail pratique à venir.
 
 # //''À partir du code source seulement''//, modélisez chaque classe (seulement les classes, pas les liens) du [[projet du Pendu initial|https://lecegeplimoilou-my.sharepoint.com/:u:/g/personal/eric_martel_cegeplimoilou_ca/EbCwO6DjmEdOqeODw7FlfgIBYeyp3dGMFDRSwh7naKSN7Q?e=PJbAPT&amp;download=1]] avec les logiciels suivants:
@@ -9178,9 +9178,9 @@ D'autres types de relations existantes (comme l'''association simple'', l'''aggr
 
 # //''Toujours à partir du code source seulement''//, pour chacun des modèles créés en 1 ci-dessus, insérez toutes les relations nécessaires entre les classes et énumérations (le cas échéant).
 
-# Avec le logiciel de modélisation de votre choix parmi ceux ci-dessus, modélisez entièrement une solution au défi 2 du cours de POO 2 (//vous n'avez pas besoin d'avoir fait le défi pour créer le modèle: c'est même mieux au contraire de faire le modèle avant de commencer à coder!//).
+# Avec le logiciel de modélisation de votre choix parmi ceux ci-dessus, modélisez entièrement une solution au défi 3 du cours de POO 2 (//vous n'avez pas besoin d'avoir fait le défi pour créer le modèle: c'est même mieux au contraire de faire le modèle avant de commencer à coder!//).
 #* Choisissez bien les classes, attributs et méthodes qui constitueront votre solution. 
-#* Votre solution finale au défi 2 en POO 2 pourra être différente de ce que vous aurez d'abord imaginé comme modèle ici (c'est fréquent de changer un modèle en cours de réalisation d'un programme!).</pre>
+#* Votre solution finale au défi 3 en POO 2 pourra être différente de ce que vous aurez d'abord imaginé comme modèle ici (c'est fréquent de changer un modèle en cours de réalisation d'un programme!).</pre>
 </div>
 <div created="20220622191725220" modified="20220622191754197" tags="[[02 Systèmes de contrôle de version]]" title="2.01 Introduction">
 <pre></pre>
