--- a/420-fah-li-em.html
+++ b/420-fah-li-em.html
@@ -8828,19 +8828,19 @@ Error message and password prompt
 <div created="20220623110405281" modified="20220623110405281" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
-<div created="20220623110407925" modified="20220629125706138" title="$:/state/sidebar">
+<div created="20220623110407925" modified="20220705144418704" title="$:/state/sidebar">
 <pre>yes</pre>
 </div>
-<div created="20220622191805667" modified="20220630161034499" title="$:/state/toc/Table des matières-01 Diagrammes de classe UML--249536019">
+<div created="20220622191805667" modified="20220705144627881" title="$:/state/toc/Table des matières-01 Diagrammes de classe UML--249536019">
 <pre>open</pre>
 </div>
 <div created="20220622191803003" modified="20220622191803983" title="$:/state/toc/Table des matières-02 Systèmes de contrôle de version--249536019">
 <pre>close</pre>
 </div>
-<div created="20220623144907257" modified="20220630161802417" title="$:/state/toc/Table des matières/01 Diagrammes de classe UML-1.02 Diagrammes de classes--249536019">
+<div created="20220623144907257" modified="20220705144729865" title="$:/state/toc/Table des matières/01 Diagrammes de classe UML-1.02 Diagrammes de classes--249536019">
 <pre>open</pre>
 </div>
-<div list="Semainier [[Table des matières]] [[1.2.02 Les relations de base]] 1.Exercices" title="$:/StoryList">
+<div list="Semainier [[Table des matières]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8856,7 +8856,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/e/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
+            &quot;text&quot;: &quot;file:///E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -8876,7 +8876,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/e/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
+            &quot;text&quot;: &quot;/E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -8888,11 +8888,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1707&quot;
+            &quot;text&quot;: &quot;1728&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1067&quot;
+            &quot;text&quot;: &quot;3073&quot;
         }
     }
 }</pre>
@@ -9071,7 +9071,7 @@ Citons entre autres:
 
 Vous pouvez les essayer et les comparer en termes de fonctionnalités et de facilité d'utilisation.</pre>
 </div>
-<div created="20220623142715057" modified="20220623152756416" tags="[[1.02 Diagrammes de classes]]" title="1.2.01 Le diagramme d'une classe">
+<div created="20220623142715057" modified="20220705131209970" tags="[[1.02 Diagrammes de classes]]" title="1.2.01 Le diagramme d'une classe">
 <pre>Dans ce cours, nous nous concentrerons surtout sur les diagrammes de classes UML.
 
 Un diagramme de classes sert à modéliser une application orientée objet en présentant ses classes avec leurs attributs et leurs méthodes, ainsi que les liens entre les classes.
@@ -9117,7 +9117,7 @@ On écrira chaque attribut de la classe en insérant les éléments suivants, da
 Ex.:
 
 | !Personne |
-|+Nom : string { get; -set; }&lt;br&gt;+Age : string { get; } &lt;br&gt;-_dateNaissance : ~DateTime |
+|+Nom { get; -set; } : string&lt;br&gt;+Age { get; } : string&lt;br&gt;-_dateNaissance : ~DateTime |
 | &amp;nbsp; |
 
  Le «-set;» ci-dessus indique un mutateur privé.
@@ -9133,7 +9133,7 @@ Comme pour les attributs, avec les différences suivantes:
 Ex.:
 
 | !Personne |
-|+Nom : string { get; -set; }&lt;br&gt;+Age : string { get; } &lt;br&gt;-_dateNaissance : ~DateTime |
+|+Nom { get; -set; }: string&lt;br&gt;+Age { get; }: string&lt;br&gt;-_dateNaissance : ~DateTime |
 |+Personne(string nom, ~DateTime dateNaissance) : Personne&lt;br&gt;+Renommer(string nom)|
 
 Le méthode Personne() ci-dessus est le constructeur.
@@ -9168,7 +9168,7 @@ D'autres types de relations existantes (comme l'''association simple'', l'''aggr
 
 &lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/1b991fce-7fe6-44e0-b76f-ade46dd35e67?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
-<div created="20220623143644530" modified="20220629125656070" tags="[[01 Diagrammes de classe UML]]" title="1.Exercices">
+<div created="20220623143644530" modified="20220705144247100" tags="[[01 Diagrammes de classe UML]]" title="1.Exercices">
 <pre>''Note:'' chaque exercice de n'importe quelle section ''doit'' être fait et présenté à l'enseignant et pourrait être inclus dans un travail pratique à venir.
 
 # //''À partir du code source seulement''//, modélisez chaque classe (seulement les classes, pas les liens) du [[projet du Pendu initial|https://lecegeplimoilou-my.sharepoint.com/:u:/g/personal/eric_martel_cegeplimoilou_ca/EbCwO6DjmEdOqeODw7FlfgIBYeyp3dGMFDRSwh7naKSN7Q?e=PJbAPT&amp;download=1]] avec les logiciels suivants:
@@ -9182,7 +9182,12 @@ D'autres types de relations existantes (comme l'''association simple'', l'''aggr
 
 # Avec le logiciel de modélisation de votre choix parmi ceux ci-dessus, modélisez entièrement une solution au défi 3 du cours de POO 2 (//vous n'avez pas besoin d'avoir fait le défi pour créer le modèle: c'est même mieux au contraire de faire le modèle avant de commencer à coder!//).
 #* Choisissez bien les classes, attributs et méthodes qui constitueront votre solution. 
-#* Votre solution finale au défi 3 en POO 2 pourra être différente de ce que vous aurez d'abord imaginé comme modèle ici (c'est fréquent de changer un modèle en cours de réalisation d'un programme!).</pre>
+#* Votre solution finale au défi 3 en POO 2 pourra être différente de ce que vous aurez d'abord imaginé comme modèle ici (c'est fréquent de changer un modèle en cours de réalisation d'un programme!).
+
+# Dans un nouveau projet C# WPF appelé //~BatailleNavale//, implémentez les bases du modèle ci-dessous (c.-à-d. créez ''la structure seulement'', sans compléter le code -- donc le programme n'affichera rien). Le programme doit être 100% conforme au modèle, ne comporter aucune erreur et compiler même s'il n'affiche rien.&lt;div&gt;
+
+[img[https://i.imgur.com/6obw7YR.png]]
+&lt;/div&gt;</pre>
 </div>
 <div created="20220622191725220" modified="20220622191754197" tags="[[02 Systèmes de contrôle de version]]" title="2.01 Introduction">
 <pre></pre>
@@ -9242,10 +9247,11 @@ pre, code {
 &lt;/p&gt;
 \end</pre>
 </div>
-<div created="20220623152814314" modified="20220628154645146" tags="" title="Semainier">
+<div created="20220623152814314" modified="20220705144654656" tags="" title="Semainier">
 <pre>| Semaine | Sections à l'étude | Exercices / Travaux |h
-| 1 (20 juin) | 1 | 1.Exercices |
-| 2 (27 juin) | 1 (ajouté 1.2.02) | 1.Exercices (ajouté 1.2 et 1.3) |</pre>
+| 1 (20 juin) | 1.01, 1.2.01 et 1.03 | Exercice 1.1 |
+| 2 (27 juin) | 1.2.02 | Exercices 1.2 et 1.3, TP1 |
+| 3 (4 juillet) | 1 | TP1, Exercice 1.4 |</pre>
 </div>
 <div bag="default" caption="Contenu" created="20181113130821883" list-before="$:/core/ui/SideBar/Open" modified="20181113131023314" revision="0" tags="$:/tags/SideBar" title="Table des matières" type="text/vnd.tiddlywiki">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
