--- a/420-fah-li-em.html
+++ b/420-fah-li-em.html
@@ -181,6 +181,8 @@ Error message and password prompt
 
 <li>1.03 Logiciels UML</li>
 
+<li>1.04 Diagrammes Visual Studio</li>
+
 <li>1.2.01 Le diagramme d'une classe</li>
 
 <li>1.2.02 Les relations de base</li>
@@ -8840,7 +8842,7 @@ Error message and password prompt
 <div created="20220623144907257" modified="20220705144729865" title="$:/state/toc/Table des matières/01 Diagrammes de classe UML-1.02 Diagrammes de classes--249536019">
 <pre>open</pre>
 </div>
-<div list="Semainier [[Table des matières]]" title="$:/StoryList">
+<div list="Semainier [[Table des matières]] 1.Exercices [[01 Diagrammes de classe UML]] [[1.04 Diagrammes Visual Studio]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9071,6 +9073,11 @@ Citons entre autres:
 
 Vous pouvez les essayer et les comparer en termes de fonctionnalités et de facilité d'utilisation.</pre>
 </div>
+<div created="20220707134532103" modified="20220707134723621" tags="[[01 Diagrammes de classe UML]]" title="1.04 Diagrammes Visual Studio">
+<pre>Bien que ce ne soient pas des diagrammes respectant la notation UML, on peut générer des diagrammes de classes dans Visual Studio.
+
+&lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/b7748659-6ca8-4edc-ba04-187a84b4c1a8?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;</pre>
+</div>
 <div created="20220623142715057" modified="20220705131209970" tags="[[1.02 Diagrammes de classes]]" title="1.2.01 Le diagramme d'une classe">
 <pre>Dans ce cours, nous nous concentrerons surtout sur les diagrammes de classes UML.
 
@@ -9168,7 +9175,7 @@ D'autres types de relations existantes (comme l'''association simple'', l'''aggr
 
 &lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/1b991fce-7fe6-44e0-b76f-ade46dd35e67?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
-<div created="20220623143644530" modified="20220705144247100" tags="[[01 Diagrammes de classe UML]]" title="1.Exercices">
+<div created="20220623143644530" modified="20220707135011642" tags="[[01 Diagrammes de classe UML]]" title="1.Exercices">
 <pre>''Note:'' chaque exercice de n'importe quelle section ''doit'' être fait et présenté à l'enseignant et pourrait être inclus dans un travail pratique à venir.
 
 # //''À partir du code source seulement''//, modélisez chaque classe (seulement les classes, pas les liens) du [[projet du Pendu initial|https://lecegeplimoilou-my.sharepoint.com/:u:/g/personal/eric_martel_cegeplimoilou_ca/EbCwO6DjmEdOqeODw7FlfgIBYeyp3dGMFDRSwh7naKSN7Q?e=PJbAPT&amp;download=1]] avec les logiciels suivants:
@@ -9187,7 +9194,9 @@ D'autres types de relations existantes (comme l'''association simple'', l'''aggr
 # Dans un nouveau projet C# WPF appelé //~BatailleNavale//, implémentez les bases du modèle ci-dessous (c.-à-d. créez ''la structure seulement'', sans compléter le code -- donc le programme n'affichera rien). Le programme doit être 100% conforme au modèle, ne comporter aucune erreur et compiler même s'il n'affiche rien.&lt;div&gt;
 
 [img[https://i.imgur.com/6obw7YR.png]]
-&lt;/div&gt;</pre>
+&lt;/div&gt;
+
+# À partir du projet créé en 4 ci-dessus, générez un diagramme de classes dans Visual Studio, puis utilisez Visio afin de créer un modèle hybride UML à partir de ce diagramme.</pre>
 </div>
 <div created="20220622191725220" modified="20220622191754197" tags="[[02 Systèmes de contrôle de version]]" title="2.01 Introduction">
 <pre></pre>
@@ -9247,11 +9256,11 @@ pre, code {
 &lt;/p&gt;
 \end</pre>
 </div>
-<div created="20220623152814314" modified="20220705144654656" tags="" title="Semainier">
+<div created="20220623152814314" modified="20220707135034734" tags="" title="Semainier">
 <pre>| Semaine | Sections à l'étude | Exercices / Travaux |h
 | 1 (20 juin) | 1.01, 1.2.01 et 1.03 | Exercice 1.1 |
 | 2 (27 juin) | 1.2.02 | Exercices 1.2 et 1.3, TP1 |
-| 3 (4 juillet) | 1 | TP1, Exercice 1.4 |</pre>
+| 3 (4 juillet) | 1.04 | TP1, Exercices 1.4 et 1.5 |</pre>
 </div>
 <div bag="default" caption="Contenu" created="20181113130821883" list-before="$:/core/ui/SideBar/Open" modified="20181113131023314" revision="0" tags="$:/tags/SideBar" title="Table des matières" type="text/vnd.tiddlywiki">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
