--- a/420-fah-li-em.html
+++ b/420-fah-li-em.html
@@ -8842,7 +8842,7 @@ Error message and password prompt
 <div created="20220623144907257" modified="20220705144729865" title="$:/state/toc/Table des matières/01 Diagrammes de classe UML-1.02 Diagrammes de classes--249536019">
 <pre>open</pre>
 </div>
-<div list="Semainier [[Table des matières]] 1.Exercices [[01 Diagrammes de classe UML]] [[1.04 Diagrammes Visual Studio]]" title="$:/StoryList">
+<div list="Semainier [[Table des matières]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8890,11 +8890,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1728&quot;
+            &quot;text&quot;: &quot;3072&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;3073&quot;
+            &quot;text&quot;: &quot;1728&quot;
         }
     }
 }</pre>
@@ -9256,11 +9256,13 @@ pre, code {
 &lt;/p&gt;
 \end</pre>
 </div>
-<div created="20220623152814314" modified="20220707135034734" tags="" title="Semainier">
+<div created="20220623152814314" modified="20220711112328726" tags="" title="Semainier">
 <pre>| Semaine | Sections à l'étude | Exercices / Travaux |h
 | 1 (20 juin) | 1.01, 1.2.01 et 1.03 | Exercice 1.1 |
 | 2 (27 juin) | 1.2.02 | Exercices 1.2 et 1.3, TP1 |
-| 3 (4 juillet) | 1.04 | TP1, Exercices 1.4 et 1.5 |</pre>
+| 3 (4 juillet) | 1.04 | TP1, Exercices 1.4 et 1.5 |
+| 4 (11 juillet) | 1 au complet | Examen 1 |
+| 5 (18 juillet) | ''Vacances'' |&lt;|</pre>
 </div>
 <div bag="default" caption="Contenu" created="20181113130821883" list-before="$:/core/ui/SideBar/Open" modified="20181113131023314" revision="0" tags="$:/tags/SideBar" title="Table des matières" type="text/vnd.tiddlywiki">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
