Ajouté piste solution ex. 1.4

--- a/420-fah-li-em.html
+++ b/420-fah-li-em.html
@@ -8830,8 +8830,8 @@ Error message and password prompt
 <div created="20220623110405281" modified="20220623110405281" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
-<div created="20220623110407925" modified="20220705144418704" title="$:/state/sidebar">
-<pre>yes</pre>
+<div created="20220623110407925" modified="20220711124229324" title="$:/state/sidebar">
+<pre>no</pre>
 </div>
 <div created="20220622191805667" modified="20220705144627881" title="$:/state/toc/Table des matières-01 Diagrammes de classe UML--249536019">
 <pre>open</pre>
@@ -8842,7 +8842,7 @@ Error message and password prompt
 <div created="20220623144907257" modified="20220705144729865" title="$:/state/toc/Table des matières/01 Diagrammes de classe UML-1.02 Diagrammes de classes--249536019">
 <pre>open</pre>
 </div>
-<div list="Semainier [[Table des matières]]" title="$:/StoryList">
+<div list="Semainier [[Table des matières]] [[1.2.02 Les relations de base]] 1.Exercices" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9175,7 +9175,7 @@ D'autres types de relations existantes (comme l'''association simple'', l'''aggr
 
 &lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/1b991fce-7fe6-44e0-b76f-ade46dd35e67?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
-<div created="20220623143644530" modified="20220707135011642" tags="[[01 Diagrammes de classe UML]]" title="1.Exercices">
+<div created="20220623143644530" modified="20220711130706821" tags="[[01 Diagrammes de classe UML]]" title="1.Exercices">
 <pre>''Note:'' chaque exercice de n'importe quelle section ''doit'' être fait et présenté à l'enseignant et pourrait être inclus dans un travail pratique à venir.
 
 # //''À partir du code source seulement''//, modélisez chaque classe (seulement les classes, pas les liens) du [[projet du Pendu initial|https://lecegeplimoilou-my.sharepoint.com/:u:/g/personal/eric_martel_cegeplimoilou_ca/EbCwO6DjmEdOqeODw7FlfgIBYeyp3dGMFDRSwh7naKSN7Q?e=PJbAPT&amp;download=1]] avec les logiciels suivants:
@@ -9194,6 +9194,8 @@ D'autres types de relations existantes (comme l'''association simple'', l'''aggr
 # Dans un nouveau projet C# WPF appelé //~BatailleNavale//, implémentez les bases du modèle ci-dessous (c.-à-d. créez ''la structure seulement'', sans compléter le code -- donc le programme n'affichera rien). Le programme doit être 100% conforme au modèle, ne comporter aucune erreur et compiler même s'il n'affiche rien.&lt;div&gt;
 
 [img[https://i.imgur.com/6obw7YR.png]]
+
+&gt; //[[Exemple de démarrage de solution|https://web.microsoftstream.com/video/25df7250-723a-4a54-b7a8-dbfd23e6ce21]]//
 &lt;/div&gt;
 
 # À partir du projet créé en 4 ci-dessus, générez un diagramme de classes dans Visual Studio, puis utilisez Visio afin de créer un modèle hybride UML à partir de ce diagramme.</pre>
