--- a/420-fah-li-em.html
+++ b/420-fah-li-em.html
@@ -8890,7 +8890,7 @@ Error message and password prompt
 <div created="20220811133315279" modified="20220811142518463" title="$:/state/toc/Table des matières/02 Systèmes de gestion de versions (SGV)-2.02 Centralisé vs décentralisé--249536019">
 <pre>close</pre>
 </div>
-<div list="Semainier [[Table des matières]]" title="$:/StoryList">
+<div list="Semainier [[Table des matières]] 2.Exercices" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8906,7 +8906,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/eric.martel/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -8926,7 +8926,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
+            &quot;text&quot;: &quot;/C:/Users/eric.martel/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -8938,11 +8938,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;3072&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1728&quot;
+            &quot;text&quot;: &quot;1080&quot;
         }
     }
 }</pre>
@@ -9400,10 +9400,10 @@ Une fois un dépôt et un client en place, on peut interagir avec le dépôt par
 
 &lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/376df76d-abdc-4212-bcd0-04177264e061?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
-<div created="20220811161557305" modified="20220811162004970" tags="[[02 Systèmes de gestion de versions (SGV)]]" title="2.Exercices">
+<div created="20220811161557305" modified="20220811180955199" tags="[[02 Systèmes de gestion de versions (SGV)]]" title="2.Exercices">
 <pre>''IMPORTANT:'' Une démonstration du résultat de tous les exercices ci-dessous doit être effectuée auprès de votre enseigant après complétion.
 
-# Effectuez toutes les opérations de la vidéo [[E22 420-FAH v08 SVN-2|https://web.microsoftstream.com/video/21d43fa4-d719-4d41-9ec5-54f979498347]], puis montrez le résultat final à votre enseignant.</pre>
+# Effectuez toutes les opérations de la vidéo [[E22 420-FAH v08 SVN-2|https://web.microsoftstream.com/video/21d43fa4-d719-4d41-9ec5-54f979498347]] (''incluant les données des vidéos antérieures''), puis montrez le résultat final à votre enseignant.</pre>
 </div>
 <div bag="default" created="20181113131237544" modified="20210822182401138" revision="0" tags="$:/tags/Stylesheet" title="css" type="text/css">
 <pre>.boite {
