--- a/420-fah-li-em.html
+++ b/420-fah-li-em.html
@@ -8895,7 +8895,7 @@ Error message and password prompt
 <div created="20220811133315279" modified="20220811142518463" title="$:/state/toc/Table des matières/02 Systèmes de gestion de versions (SGV)-2.02 Centralisé vs décentralisé--249536019">
 <pre>close</pre>
 </div>
-<div list="Semainier [[Table des matières]]" title="$:/StoryList">
+<div list="Semainier [[Table des matières]] [[2.04 Git]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8943,11 +8943,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;3072&quot;
+            &quot;text&quot;: &quot;1728&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1728&quot;
+            &quot;text&quot;: &quot;3073&quot;
         }
     }
 }</pre>
@@ -9369,7 +9369,7 @@ Une fois un dépôt et un client en place, on peut interagir avec le dépôt par
 
 &lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/02a3f893-8862-43ec-ba19-dba8892e4f0f?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
-<div created="20220811140025404" modified="20220818141700400" tags="[[02 Systèmes de gestion de versions (SGV)]]" title="2.04 Git">
+<div created="20220811140025404" modified="20220818144028186" tags="[[02 Systèmes de gestion de versions (SGV)]]" title="2.04 Git">
 <pre>A été créé par Linux Torvalds pour le développement du noyau Linux, car aucun SGV existant (y compris Subversion) ne comblait les besoins de l'équipe principale de développement.
 
 ! Logique générale de fonctionnement
@@ -9414,7 +9414,11 @@ Une fois un dépôt et un client en place, on peut interagir avec le dépôt loc
 
 ---
 
-&lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/7611a040-4d2f-4d4f-a07b-b9d4039ad498?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;</pre>
+&lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/7611a040-4d2f-4d4f-a07b-b9d4039ad498?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;
+
+&lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/9bade028-aff8-4a6b-8be4-d18bb6278bec?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;
+
+&lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/bbf65382-9d14-410a-bb6f-500a941345c6?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
 <div created="20220811124349572" modified="20220811152313960" tags="[[2.02 Centralisé vs décentralisé]]" title="2.2.01 SGV centralisé">
 <pre>* Dans un SGV centralisé, il existe un dépôt central et unique des fichiers gérant les versions, qui sert de référence officielle pour tout le monde; la collaboration est donc //obligatoire//, puisque tous les utilisateurs sont forcés de partager le même dépôt de versions de fichiers:&lt;div&gt;
