--- a/420-fah-li-em.html
+++ b/420-fah-li-em.html
@@ -8911,7 +8911,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/eric.martel/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -8931,7 +8931,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
+            &quot;text&quot;: &quot;/C:/Users/eric.martel/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -8943,11 +8943,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1728&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;3073&quot;
+            &quot;text&quot;: &quot;1080&quot;
         }
     }
 }</pre>
@@ -9369,7 +9369,7 @@ Une fois un dépôt et un client en place, on peut interagir avec le dépôt par
 
 &lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/02a3f893-8862-43ec-ba19-dba8892e4f0f?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
-<div created="20220811140025404" modified="20220818144028186" tags="[[02 Systèmes de gestion de versions (SGV)]]" title="2.04 Git">
+<div created="20220811140025404" modified="20220818173136624" tags="[[02 Systèmes de gestion de versions (SGV)]]" title="2.04 Git">
 <pre>A été créé par Linux Torvalds pour le développement du noyau Linux, car aucun SGV existant (y compris Subversion) ne comblait les besoins de l'équipe principale de développement.
 
 ! Logique générale de fonctionnement
@@ -9384,7 +9384,7 @@ Une fois un dépôt et un client en place, on peut interagir avec le dépôt par
 
 Avant d'opérer sur un dépôt, il faut:
 
-# avoir un client Git permettant de communiquer avec un dépôt (comme [[Git for Windows|https://gitforwindows.org/]]+[[TortoiseGit|https://tortoisesvn.net/]], [[GitKraken|https://www.gitkraken.com/]], ou [[ligne de commande|https://git-scm.com/book/fr/v2]]); à noter que plusieurs logiciels de développement intègrent des clients Git;
+# avoir un client Git permettant de communiquer avec un dépôt (comme [[Git for Windows|https://gitforwindows.org/]]+[[TortoiseGit|https://tortoisegit.org/]], [[GitKraken|https://www.gitkraken.com/]], ou [[ligne de commande|https://git-scm.com/book/fr/v2]]); à noter que plusieurs logiciels de développement intègrent des clients Git;
 
 # récupérer une copie d'un dépôt distant ou en créer un soi-même (pour un projet qu'on crée).
 
